infra/nodeport-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
  labels:
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/instance: ngf
    app.kubernetes.io/version: "1.6.1"
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: nginx-gateway-fabric
    app.kubernetes.io/instance: ngf
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 31080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
      nodePort: 31443
